--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -73,8 +73,8 @@
           <!-- Rating Column -->
           <ng-container class="colums"
                         matColumnDef="Rating">
-            <th mat-header-cell style="text-align: left;"
-                *matHeaderCellDef> Rating </th>
+            <th mat-header-cell
+                *matHeaderCellDef> 5 Star Rating </th>
             <td mat-cell
                 *matCellDef="let element">
               <pm-star class="product-rating"
@@ -143,7 +143,7 @@
           <ng-container class="colums"
                         matColumnDef="code">
             <th mat-header-cell
-                *matHeaderCellDef> code </th>
+                *matHeaderCellDef> Code </th>
             <td mat-cell
                 *matCellDef="let element"> {{element.productCode}} </td>
           </ng-container>
@@ -228,7 +228,7 @@
           <ng-container class="colums"
                         matColumnDef="code">
             <th mat-header-cell
-                *matHeaderCellDef> code </th>
+                *matHeaderCellDef> Code </th>
             <td mat-cell
                 *matCellDef="let element"> {{element.productCode}} </td>
           </ng-container>
@@ -313,7 +313,7 @@
           <ng-container class="colums"
                         matColumnDef="code">
             <th mat-header-cell
-                *matHeaderCellDef> code </th>
+                *matHeaderCellDef> Code </th>
             <td mat-cell
                 *matCellDef="let element"> {{element.productCode}} </td>
           </ng-container>
