--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -32,7 +32,7 @@
           <ng-container class="colums"
                         matColumnDef="Product">
             <th mat-header-cell
-                *matHeaderCellDef> <mat-slide-toggle (click)="toggleImage()"> </mat-slide-toggle> Product </th>
+                *matHeaderCellDef> <mat-slide-toggle (click)="toggleImage()"> </mat-slide-toggle> {{showImages? 'Hide':'Show'}}Product </th>
             <td mat-cell
                 *matCellDef="let element">
               <img *ngIf='showImages'
@@ -118,7 +118,7 @@
           <ng-container class="colums"
                         matColumnDef="Product">
             <th mat-header-cell
-                *matHeaderCellDef> Product </th>
+                *matHeaderCellDef>  <mat-slide-toggle (click)="toggleImage()"> </mat-slide-toggle> {{showImages? 'Hide':'Show'}} Product </th>
             <td mat-cell
                 *matCellDef="let element">
               <img *ngIf='showImages'
@@ -203,7 +203,7 @@
           <ng-container class="colums"
                         matColumnDef="Product">
             <th mat-header-cell
-                *matHeaderCellDef> Product </th>
+                *matHeaderCellDef>  <mat-slide-toggle (click)="toggleImage()"> </mat-slide-toggle>{{showImages? 'Hide':'Show'}} Product </th>
             <td mat-cell
                 *matCellDef="let element">
               <img *ngIf='showImages'
@@ -288,7 +288,7 @@
           <ng-container class="colums"
                         matColumnDef="Product">
             <th mat-header-cell
-                *matHeaderCellDef> Product </th>
+                *matHeaderCellDef>  <mat-slide-toggle (click)="toggleImage()"> </mat-slide-toggle> {{showImages? 'Hide':'Show'}} Product </th>
             <td mat-cell
                 *matCellDef="let element">
               <img *ngIf='showImages'
